# Openworker

./: .gitignore  README.md  main.py  mcp_config.json  pyproject.toml  usage_workflow.md
openworker/: cli.py  client.py  command_handler.py  config.py  server.py  state.py
openworker/agents/: base_agent.py  react.py  summarizer.py
openworker/core/: llm.py
openworker/prompts/: action_summary.py  query_rewrite.py  system.py
openworker/rag/: query_rewriter.py  security.py  splitters.py  store.py
openworker/tools/: executor.py
openworker/utils/: decorators.py  logger.py  readers.py
